# code-slides

./: .replit  LICENSE  README.md  main.py  presentation_storage.py  presentations.json  pyproject.toml  run.py  test_storage.py
code_slides/: __init__.py  main.py  presentation_storage.py
code_slides/static/css/: styles.css
code_slides/templates/: navigation.html
static/css/: presentation.css
static/js/: navigation.js  presentation.js
templates/: index.html  navigation.html  presentation.html
